--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,9 @@
             <li><a href="/products?sort=price&sort_order=asc">Sort by Lowest Price</a></li>
             <li><a href="/products/random">Random Product</a></li>
             <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <% Category.all.each do |category| %>
+              <li><a href="/products?category=<%= category.name %>"><%= category.name %></a></li>
+            <% end %>
             <li class="divider"></li>
             <li><a href="#">One more separated link</a></li>
           </ul>
