--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -27,7 +27,7 @@
 </div>
 
 <div class=buybutton>
-<%= form_tag '/orders', method: :post do %>
+<%= form_tag '/carted_products', method: :post do %>
   <div>
     <%= label_tag :quanity %>
     <%= text_field_tag :quantity %>
@@ -35,7 +35,7 @@
   <div>
     <%= hidden_field_tag :product_id, @product.id %>
   </div>
-  <%= submit_tag "Buy minion" %>
+  <%= submit_tag "Add To Cart" %>
   <% end %>
 </div>
 
