--- a/app/views/carted_products/index.html.erb
+++ b/app/views/carted_products/index.html.erb
@@ -1,12 +1,17 @@
 <div class="row">
   <div class="col-md-6 col-md-4">
-  <div class = minions>
-    <% @carted_product.each do |carted_product| if carted_product.user_id == current_user.id && carted_product.status == "carted" %>
-    <h2><%= @products.find_by(id: carted_product.product_id).product.name %></h2>
-    <h3>Price: <%= product.price %> Bananas</h3>
-    <%= image_tag product.product_images.first.image_url if product.product_images.first %>
-    <p><%= product.description %></p>
-    <% end %>
-  </div>
+    <div class = minions>
+      <% @carted_product.each do |carted_product| %>
+        <% if carted_product.user_id == current_user.id && carted_product.status == "carted" %>
+      <% end %>
+      <h2><%= @products.find_by(id: carted_product.product_id).name %></h2>
+      <h3>Price: <%= @products.find_by(id: carted_product.product_id).price %> Bananas</h3>
+      <h4>Quantity: <%= carted_product.quantity %></h4>
+      <% if @products.find_by(id: carted_product.product_id).product_images.first %>
+        <%= image_tag @products.find_by(id: carted_product.product_id).product_images.first.image_url %>
+      <% end %>
+      <p><%= @products.find_by(id: carted_product.product_id).description %></p>
+      <% end %>
+    </div>
   </div>
 </div>
