--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,7 @@
 <!--         </div> -->
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/products?discount=true">Discount Items</a></li>
+        <li><span class="glyphicon glyphicon-shopping-cart"><%= link_to "Shopping Cart", "/carted_products" %></span></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
