--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,16 @@
+<% if @carted_product.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@carted_product.errors.count, "error") %> prohibited this product from being added to your cart:</h2>
+ 
+    <ul>
+    <% @carted_product.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
+
 <div class=indminion>
   <h2><%= @product.name %></h2>
   <h3><%= @product.sale_message %></h3>
@@ -13,6 +26,7 @@
   <p>Tax: <%= @product.calculate_tax %> Bananas</p>
   <p>Total: <%= @product.calculate_total %> Bananas</p>
 </div>
+
 
 <div class="col-md-1">
   <div class=edit>
