--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<% if @carted_product.errors.any? %>
+<% if @carted_product && @carted_product.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(@carted_product.errors.count, "error") %> prohibited this product from being added to your cart:</h2>
  
@@ -44,7 +44,7 @@
 <%= form_tag '/carted_products', method: :post do %>
   <div>
     <%= label_tag :quanity %>
-    <%= text_field_tag :quantity %>
+    <%= text_field_tag :quantity, @carted_product ? @carted_product.quantity : nil %>
   </div>
   <div>
     <%= hidden_field_tag :product_id, @product.id %>
