--- a/app/views/carted_products/index.html.erb
+++ b/app/views/carted_products/index.html.erb
@@ -3,9 +3,10 @@
     <div class = minions>
       <% @carted_product.each do |carted_product| %>
         <% if carted_product.user_id == current_user.id && carted_product.status == "carted" %>
+        <%= link_to "Remove", "carted_products/#{carted_product.id}", method: :delete %>
       <% end %>
-      <h2><%= @products.find_by(id: carted_product.product_id).name %></h2>
-      <h3>Price: <%= @products.find_by(id: carted_product.product_id).price %> Bananas</h3>
+      <h2><%= carted_product.product.name %></h2>
+      <h3>Price: <%= carted_product.product.price %> Bananas</h3>
       <h4>Quantity: <%= carted_product.quantity %></h4>
       <% if @products.find_by(id: carted_product.product_id).product_images.first %>
         <%= image_tag @products.find_by(id: carted_product.product_id).product_images.first.image_url %>
