--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -28,17 +28,19 @@
 </div>
 
 
-<div class="col-md-1">
-  <div class=edit>
-    <button type="submit" class="btn btn-default"><%= link_to "Edit", "/products/#{@product.id}/edit" %></button>
+<% if user_signed_in? && current_user.admin %>
+  <div class="col-md-1">
+    <div class=edit>
+      <button type="submit" class="btn btn-default"><%= link_to "Edit", "/products/#{@product.id}/edit" %></button>
+    </div>
   </div>
-</div>
 
-<div class="col-md-1">
-  <div class=delete>
-    <button type="submit" class="btn btn-default"><%= link_to "Delete", "/products/#{@product.id}", method: :delete %></button>
+  <div class="col-md-1">
+    <div class=delete>
+      <button type="submit" class="btn btn-default"><%= link_to "Delete", "/products/#{@product.id}", method: :delete %></button>
+    </div>
   </div>
-</div>
+<% end %>
 
 <div class=buybutton>
 <%= form_tag '/carted_products', method: :post do %>
