--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -38,3 +38,23 @@ h2 {
   margin-left: 100px;
   margin-bottom: 20px;
 }
+
+a:link {
+  color: black;
+  text-decoration: none;
+}
+
+a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  color:#FF9E39;
+  text-decoration: none;
+}
+
+a:active {
+  color:#FDD750;
+  text-decoration: none;
+}
