match button color in scss

--- a/app/assets/stylesheets/style.scss.erb
+++ b/app/assets/stylesheets/style.scss.erb
@@ -37,7 +37,7 @@ body {
 /* button*/
 .container .btn {
   border-radius: 0;
-  background-color: #FDD750;
+  background-color: #FBDE62;
   border: 0px;
 }
 
