--- a/app/assets/stylesheets/style.scss.erb
+++ b/app/assets/stylesheets/style.scss.erb
@@ -8,26 +8,26 @@ body {
 
 /* navbar */
 .navbar {
-  border: 0px;
   background-color: #FF9E39;
+  border: 0;
 }
 
 .navbar-header > .navbar-brand > img {
-  width: 50px;
   height: 50px;
   margin: -15.5px;
+  width: 50px;
 }
 
 /* jumbrotron */
 
 .jumbotron {
   background-image: image-url("<%= asset_path('minion_eyes.jpg') %>");
-  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  text-align: center;
-  padding-top: 300px;
+  background-size: cover;
   margin: auto;
+  padding-top: 300px;
+  text-align: center;
 }
 
 .jumbotron > h1 {
@@ -36,14 +36,14 @@ body {
 
 /* button*/
 .container .btn {
-  border-radius: 0;
   background-color: #FBDE62;
-  border: 0px;
+  border: 0;
+  border-radius: 0;
 }
 
 /* carousel */
 .carousel {
-  background: white;
+  background: #FFFFFF;
 }
 
 .carousel-inner > .item > img {
