--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,7 +10,6 @@
   </div>
 <% end %>
 
-
 <div class=indminion>
   <h2><%= @product.name %></h2>
   <h3><%= @product.sale_message %></h3>
@@ -27,20 +26,15 @@
   <p>Total: <%= @product.calculate_total %> Bananas</p>
 </div>
 
-
-<% if user_signed_in? && current_user.admin %>
-  <div class="col-md-1">
-    <div class=edit>
-      <button type="submit" class="btn btn-default"><%= link_to "Edit", "/products/#{@product.id}/edit" %></button>
+<div class="row">
+  <% if user_signed_in? && current_user.admin %>
+    <div class="col-md-1">
+        <button type="submit" class="btn btn-default"><%= link_to "Edit", "/products/#{@product.id}/edit" %></button>
     </div>
-  </div>
 
-  <div class="col-md-1">
-    <div class=delete>
-      <button type="submit" class="btn btn-default"><%= link_to "Delete", "/products/#{@product.id}", method: :delete %></button>
-    </div>
-  </div>
-<% end %>
+        <button type="submit" class="btn btn-default"><%= link_to "Delete", "/products/#{@product.id}", method: :delete %></button>
+  <% end %>
+</div>
 
 <div class=buybutton>
 <%= form_tag '/carted_products', method: :post do %>
