--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -3,11 +3,11 @@
 <%= form_tag '/products', method: :post do %>
   <div>
     <%= label_tag :name %>
-    <%= text_field_tag :name %>
+    <%= text_field_tag :name, @product.name %>
   </div>
   <div>
     <%= label_tag :price %>
-    <%= text_field_tag :price %>
+    <%= text_field_tag :price, @product.price %>
   </div>
   <div>
     <%= label_tag :image_1 %>
@@ -17,6 +17,7 @@
     <%= label_tag :image_2 %>
     <%= text_field_tag :image_2 %>
   </div>
+  <%= collection_select :supplier, :supplier_id, Supplier.all, :id, :name %>
   <div>
     <%= label_tag :description %>
     <%= text_field_tag :description %>
